[gd_scene load_steps=3 format=3 uid="uid://bvxpeerpgh7a6"]

[ext_resource type="Script" path="res://scenes/UI/tipLabels/tip_labels.gd" id="1_6tbjq"]
[ext_resource type="FontFile" uid="uid://08ws45e5yv6x" path="res://fonts/test_font.otf" id="2_1npel"]

[node name="tip_labels" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
script = ExtResource("1_6tbjq")

[node name="TimelineShiftLabel" type="RichTextLabel" parent="."]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_fonts/normal_font = ExtResource("2_1npel")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[right][color=lightblue]Q[/color] - Timeline Shift"
fit_content = true
autowrap_mode = 0

[node name="InteractiveLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_fonts/normal_font = ExtResource("2_1npel")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[right][color=lightblue]E[/color] - Interact"
fit_content = true
autowrap_mode = 0

[node name="TalkLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_fonts/normal_font = ExtResource("2_1npel")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[right][color=lightblue]E[/color] - Talk"
fit_content = true
autowrap_mode = 0

[node name="DoorLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_fonts/normal_font = ExtResource("2_1npel")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[right][color=lightblue]E[/color] - Go Through Door"
fit_content = true
autowrap_mode = 0

[node name="AddToBoardLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_fonts/normal_font = ExtResource("2_1npel")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[right][color=lightblue]F[/color] - Add To Board"
fit_content = true
autowrap_mode = 0

[node name="DeleteElementLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_fonts/normal_font = ExtResource("2_1npel")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[right][color=lightblue]Shift + R[/color] - Remove An Element"
fit_content = true
autowrap_mode = 0

[node name="ToggleBoardLabel" type="RichTextLabel" parent="."]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_fonts/normal_font = ExtResource("2_1npel")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[right][color=lightblue]Tab[/color] - Toggle Board"
fit_content = true
autowrap_mode = 0
